--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -44,7 +44,7 @@
 
 
 .divTxtAboutMe a button:hover{
-    background-color: #fff;
+    background-color: #1ed760;
     color: black;
     cursor: pointer;
     border-color: rgba(0, 0, 0, 0.041);
